--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "sync": "opam exec -- dune build melange-radix-primitives.opam && opam exec -- dune build @install",
     "update": "opam update",
     "opam.install": "pnpm run sync && pnpm run update && opam install . --deps-only --with-test",
-    "publish": "opam publish"
+    "publish": "opam publish",
+    "prepare": "husky"
   },
   "peerDependencies": {
     "@radix-ui/react-label": "^2.0.2",
@@ -32,6 +33,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/react": "^14.1.2",
+    "husky": "^9.0.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "react": "^18.2.0",
